--- a/templates/tab.html
+++ b/templates/tab.html
@@ -22,6 +22,33 @@
 
 </head>
 <body>
+    <header>
+        <div class="header-left">
+            <div class="globe-icon"></div>
+            <h1 class="header-title">E - Land Records</h1>
+        </div>
+        <div class="header-right">
+            <div class="language-dropdown">
+                <button class="language-button"><i class="fas fa-globe"></i> en</button>
+                <div class="language-content">
+                    <a href="#">English</a>
+                    <a href="#">Español</a>
+                    <a href="#">Français</a>
+                </div>
+            </div>
+            <i class="fas fa-bell notification-icon"></i> <!-- Notification icon -->
+            <div class="dropdown">
+                <button class="dropbtn">Supt. Name</button>
+                <div class="dropdown-content">
+                    <a href="#">Profile</a>
+                    <a href="#">Settings</a>
+                    <a href="#">Logout</a>
+                </div>
+            </div>
+            <i class="fas fa-user-circle user-icon"></i> <!-- User profile icon -->
+           
+        </div>
+    </header>
     <!-- Sidebar -->
     <div class="sidebar">
         <div class="sidebar-icon active" data-icon="menu"><i class="fas fa-bars"></i></div>
