--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -7,7 +7,7 @@ body {
 }
 
 .row {
-    margin-top: 0%;
+    margin-top: 0px;
     display: flex;
     gap: 20px;
     align-items: flex-start; /* Align sections at the top */
