--- a/templates/home.html
+++ b/templates/home.html
@@ -29,32 +29,32 @@
         <div class="row login-container justify-content-center">
             <div class="col-md-4 col-sm-6 login-box">
                 <h2>User Login</h2>
-                <input type="text" class="form-control" placeholder="Username">
-                <input type="password" class="form-control" placeholder="Password">
-                <button class="btn btn-primary w-100" onclick="alert('User login clicked!')">Login</button>
+                <input type="text" class="form-control" id="userUsername" placeholder="Username">
+                <input type="password" class="form-control" id="userPassword" placeholder="Password">
+                <button class="btn btn-primary w-100" id="userLoginBtn">Login</button>
                 <br>
                 <a href="{% url 'user_reg' %}" class="register-link">Don't have an account? Register</a>
             </div>
             <div class="col-md-4 col-sm-6 login-box">
                 <h2>Official Login</h2>
-                <input type="text" class="form-control" placeholder="Official ID">
-                <input type="password" class="form-control" placeholder="Password">
-                <button class="btn btn-primary w-100" onclick="alert('Official login clicked!')">Login</button>
+                <input type="text" class="form-control" id="officialUsername" placeholder="Official ID">
+                <input type="password" class="form-control" id="officialPassword" placeholder="Password">
+                <button class="btn btn-primary w-100" id="officialLoginBtn">Login</button>
                 <br>
                 <a href="{% url 'official_reg' %}" class="register-link">Don't have an account? Register</a>
             </div>
         </div>
     </main>
-    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="{% static 'script.js' %}"></script>
     <!-- Custom JavaScript -->
     <script>
         function openPage(pageName) {
-            window.location.href = pageName ;
+            window.location.href = pageName;
         }
 
+        // Navigation buttons
         document.getElementById("homeBtn").addEventListener("click", function() {
             openPage("main");
         });
@@ -74,7 +74,30 @@
         document.getElementById("helpBtn").addEventListener("click", function() {
             openPage("help");
         });
-    </script>
 
+        // User Login
+        document.getElementById("userLoginBtn").addEventListener("click", function() {
+            const username = document.getElementById("userUsername").value;
+            const password = document.getElementById("userPassword").value;
+            
+            if (username === "admin" && password === "admin") {
+                openPage("main");
+            } else {
+                alert("Invalid username or password");
+            }
+        });
+
+        // Official Login
+        document.getElementById("officialLoginBtn").addEventListener("click", function() {
+            const username = document.getElementById("officialUsername").value;
+            const password = document.getElementById("officialPassword").value;
+            
+            if (username === "admin" && password === "admin") {
+                openPage("main");
+            } else {
+                alert("Invalid official ID or password");
+            }
+        });
+    </script>
 </body>
 </html>
