--- a/static/tab2.css
+++ b/static/tab2.css
@@ -126,5 +126,6 @@ h2.land-request-heading, h3.land-request-heading {
     margin-bottom: 6px;
 }
 .tab3-sec{
-    padding-top: 0px;
+    padding-top: 5px;
+    padding-left: 5px;
 }
