--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
             const password = document.getElementById("userPassword").value;
             
             if (username === "admin" && password === "admin") {
-                openPage("main");
+                openPage("user_dashboard");
             } else {
                 alert("Invalid username or password");
             }
