--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
             if (officialId === "admin" && password === "admin") {
                 switch(role) {
                     case 'clerk':
-                        openPage('/clerkdashboard');
+                        openPage('/clerk-dashboard');
                         break;
                     case 'officer':
                         openPage('/official-dashboard');
